<resources>
    <string name="app_name">Trivial</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="Single_Player">SinglePlayer</string>
    <string name="Multilayer">Multiplayer</string>
    <string name="Settings">Settings</string>
    <string name="Response">Response</string>
    <string name="test_category_1">Category1</string>
    <string name="test_category_2">Category2</string>
    <string name="test_category_3">Category3</string>
    <string name="HELP">Help</string>
    <string name="Rematch">Rematch</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">start!</string>
    <string name="Exit">Exit</string>
    <string name="Register">Register</string>
    <string name="logout">Log out</string>
    <string name="question_approve">Approve uploaded questions</string>
    <string name="account_manage">Account Manage</string>
    <string name="propose_history">Propose History</string>
    <string name="Return">Return</string>
    <string name="detail">Detail</string>
    <string name="question_propose">Question Propose</string>
    <string name="question">Text Question</string>
    <string name="correct">Text Correct Answer</string>
    <string name="answer1">Text Wrong Answer1</string>
    <string name="answer3">Text Wrong Answer3</string>
    <string name="answer2">Text Wrong Answer2</string>
    <string name="category">Text Category</string>
    <string name="submit">Submit</string>
    <string name="promote">promote</string>
    <string name="demote">demote</string>

    <string-array name="category_array">
        <item>All</item>
        <item>Random</item>
        <item>Geography</item>
        <item>Languages</item>
        <item>Math</item>
    </string-array>

</resources>
