...
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.857" />

<Button
    android:id="@+id/start_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    android:layout_marginLeft="0dp"
    app:layout_constraintStart_toStartOf="parent"
    android:background="@color/colorPrimary"
...
    android:layout_marginLeft="210dp"
    android:layout_marginTop="480dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="8dp"
    android:background="@color/colorPrimary"
    app:layout_constraintBottom_toTopOf="@+id/answer1_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Button
...
