...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.Category">

    <Button
        android:id="@+id/category_1_button"
        android:layout_width="225dp"
        android:layout_height="75dp"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="148dp"
...
